Decode datawatcher